--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 /public/storage
 /storage/*.key
 /vendor
-/.idea
+ **/.idea/workspace.xml
+ **/.idea/tasks.xml
 .env
 .env.backup
 .phpunit.result.cache
